# serializer version: 1
# name: test_query_codebase
  dict({
    'results': list([
      dict({
        'blocks': list([
          dict({
            'lineTypeCount': dict({
              'result': 1,
            }),
            'lines': list([
              dict({
                'line': 1,
                'lineText': '// This is a second updated example JavaScript file',
                'resultTypes': list([
                  'result',
                ]),
                'score': 0.6,
              }),
            ]),
            'score': 0.6000000000000001,
          }),
        ]),
        'fullPath': '/path/to/repo/file4.js',
        'path': 'file4.js',
        'score': 0.6,
      }),
      dict({
        'blocks': list([
          dict({
            'lineTypeCount': dict({
              'result': 1,
            }),
            'lines': list([
              dict({
                'line': 1,
                'lineText': '# This is an updated example Python file',
                'resultTypes': list([
                  'result',
                ]),
                'score': 0.6,
              }),
            ]),
            'score': 0.6000000000000001,
          }),
        ]),
        'fullPath': '/path/to/repo/file2.py',
        'path': 'file2.py',
        'score': 0.6,
      }),
      dict({
        'blocks': list([
          dict({
            'lineTypeCount': dict({
              'result': 1,
            }),
            'lines': list([
              dict({
                'line': 1,
                'lineText': '# This is another example Python file',
                'resultTypes': list([
                  'result',
                ]),
                'score': 0.6,
              }),
            ]),
            'score': 0.6000000000000001,
          }),
        ]),
        'fullPath': '/path/to/repo/file3.py',
        'path': 'file3.py',
        'score': 0.6,
      }),
      dict({
        'blocks': list([
          dict({
            'lineTypeCount': dict({
              'result': 1,
            }),
            'lines': list([
              dict({
                'line': 1,
                'lineText': '// This is a second updated example JavaScript file',
                'resultTypes': list([
                  'result',
                ]),
                'score': 0.6,
              }),
            ]),
            'score': 0.6000000000000001,
          }),
        ]),
        'fullPath': '/path/to/repo/file4.md',
        'path': 'file4.md',
        'score': 0.9,
      }),
      dict({
        'blocks': list([
          dict({
            'lineTypeCount': dict({
              'context': 3,
              'result': 3,
            }),
            'lines': list([
              dict({
                'line': 1,
                'lineText': '# Markdown file',
                'resultTypes': list([
                  'context',
                  'result',
                ]),
                'score': 0.6,
              }),
              dict({
                'line': 2,
                'lineText': 'This is an example Markdown file. Updated. ',
                'resultTypes': list([
                  'context',
                  'result',
                ]),
                'score': 0.6,
              }),
              dict({
                'line': 3,
                'lineText': "HTML is for markup, but it's complicated. Markdown is simpler.",
                'resultTypes': list([
                  'context',
                  'result',
                ]),
                'score': 0.6,
              }),
            ]),
            'score': 0.6000000000000001,
          }),
        ]),
        'fullPath': '/path/to/repo/file1.md',
        'path': 'file1.md',
        'score': 0.9,
      }),
    ]),
    'version': '0.0.0-test',
  })
# ---
# name: test_query_codebase_no_results
  dict({
    'results': list([
    ]),
    'version': '0.0.0-test',
  })
# ---
# name: test_query_files_endpoint
  list([
    dict({
      'fullPath': '/path/to/repo/file4.js',
      'path': 'file4.js',
    }),
    dict({
      'fullPath': '/path/to/repo/file2.py',
      'path': 'file2.py',
    }),
    dict({
      'fullPath': '/path/to/repo/file3.py',
      'path': 'file3.py',
    }),
    dict({
      'fullPath': '/path/to/repo/file4.md',
      'path': 'file4.md',
    }),
    dict({
      'fullPath': '/path/to/repo/file1.md',
      'path': 'file1.md',
    }),
  ])
# ---
# name: test_status_endpoint_with_all_files_analyzed
  dict({
    'stats': dict({
      'accuracy': dict({
        'percentage': 100,
      }),
      'chunks': dict({
        'analyzed': 7,
        'unanalyzed': 0,
      }),
      'queue': dict({
        'size': 0,
      }),
    }),
    'version': '0.0.0-test',
  })
# ---
